# CholeskyQR2-IM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  loadscript.sh  supek_activate_gnu.sh  supek_activate_nvhpc.sh  vega_activate.sh
benchmarks/: supek-orto-shifted.xml  supek-orto.xml  supek-strongscale-shifted.xml  supek-strongscale.xml  supek-weakscale.xml  supek.xml  vega.xml
cmake/: FindNCCL.cmake
example/: CMakeLists.txt  main.cpp
include/: cholesky_qr.hpp  cqr2bgs.hpp  cqr2bgslookahead.hpp  gschol.hpp  scqr3.hpp
include/internals/: cudamemory.hpp  distributedmatrix.hpp  timing.hpp  timing_gpu.hpp  utils.hpp  validate.hpp  validate_gpu.hpp
src/: CMakeLists.txt
src/cpu/gschol/: CMakeLists.txt  gschol.cpp
src/cpu/validate/: CMakeLists.txt  validate.cpp
src/distributedmatrix/: CMakeLists.txt  distributedmatrix.cpp
src/gpu/cqr2bgs/: CMakeLists.txt  cqr2bgs.cpp
src/gpu/cqr2bgslookahead/: CMakeLists.txt  cqr2bgslookahead.cpp
src/gpu/cudamemory/: CMakeLists.txt  cudamemory.cpp
src/gpu/gschol/: CMakeLists.txt  gschol.cpp
src/gpu/scqr3/: CMakeLists.txt  scqr3.cpp
src/gpu/validate/: CMakeLists.txt  validate_gpu.cpp
src/validate/: CMakeLists.txt  validate.cpp
